--- a/index.html
+++ b/index.html
@@ -23,84 +23,128 @@
         </div>
         <div class="math">
             Step:
-            <button class="button minus">-2</button>
-            <button class="button plus">+2</button>
+            <button class="button minus" v-on:click="decrementStepHandler">-2</button>
+            <button class="button plus" v-on:click="incrementStepHandler">+2</button>
         </div>
     </section>
     <hr>
     <section class="app js-app">
         <h1>JS</h1>
-        <h2>How much will!</h2>
+        <h2>How much will?</h2>
         <p><span class="counter"></span> + <span class="step"></span></p>
         <p><strong>Result: <span class="sum"></span></strong></p>
         <div class="math">
             Counter:
-            <button class="button minus">-1</button>
-            <button class="button plus">+1</button>
+            <button id="counter-minus" class="button minus">-1</button>
+            <button id="counter-plus" class="button plus">+1</button>
         </div>
         <div class="math">
             Step:
-            <button class="button minus">-2</button>
-            <button class="button plus">+2</button>
+            <button id="step-minus" class="button minus">-2</button>
+            <button id="step-plus" class="button plus">+2</button>
         </div>
     </section>
     <script>
         const $vue = new Vue({
-            el: '.vue-app',
+            el: ".vue-app",
             data: {
                 counter: 1,
-                step: 2
+                step: 2,
             },
             methods: {
-                incrementCounterHandler() {},
-                decrementCounterHandler() {}
-                //...
+                incrementCounterHandler() {
+                    this.counter += 1;
+                },
+                decrementCounterHandler() {
+                this.counter -= 1;
+                },
+                incrementStepHandler() {
+                this.step += 2;
+                },
+                decrementStepHandler() {
+                this.step -= 2;
+                },
             },
             computed: {
-                sum() {}
-            }
-        })
+                sum() {
+                let sum = this.counter + this.step;
+                return sum;
+                },
+            },
+            });
     </script>
+
     <script>
-        const counterEl = document.querySelector('.js-app .counter');
-        const buttonElMinus = document.querySelector('.js-app .minus');
-        const buttonElPlus = document.querySelector('.js-app .plus');
-        const sumEl = document.querySelector('.js-app .sum');
-        const stepEl = document.querySelector('.js-app .step');
+        const counterEl = document.querySelector(".js-app .counter");
+        const stepEl = document.querySelector(".js-app .step");
+        const buttonElCounterMinus = document.querySelector("#counter-minus");
+        const buttonElCounterPlus = document.querySelector("#counter-plus");
+        const buttonElStepMinus = document.querySelector("#step-minus");
+        const buttonElStepPlus = document.querySelector("#step-plus");
+        const sumEl = document.querySelector(".js-app .sum");
 
         const data = {
             counter: 1,
-            step: 2
+            step: 2,
         };
 
-        const incrementCounterHandler = function () {};
-        const decrementCounterHandler = function () {};
-        //...
-        const getSum = function () {};
+        const incrementCounterHandler = function () {
+            data.counter += 1;
+            counterEl.textContent = data.counter;
+        };
+        const decrementCounterHandler = function () {
+            data.counter -= 1;
+            counterEl.textContent = data.counter;
+        };
+
+        const incrementStepHandler = function () {
+            data.step += 2;
+            stepEl.textContent = data.step;
+        };
+        const decrementStepHandler = function () {
+            data.step -= 2;
+            stepEl.textContent = data.step;
+        };
+
+        const getSum = function () {
+            let sum = data.counter + data.step;
+            sumEl.textContent = sum;
+        };
 
         const queue = [getSum];
 
-        Object.keys(data).forEach(key => {
-            let value = data[key]; // data.counter, data.counter1, data.counter2
+        Object.keys(data).forEach((key) => {
+            let value = data[key];
             Object.defineProperty(data, key, {
+                // get: function () {
+                //   console.log("get");
+                //   return value;
+                // },
                 get: function () {
-                    console.log('get');
-                    // queue.push();
+                switch (key) {
+                    case "counter":
+                    counterEl.textContent = value;
                     return value;
+                    case "step":
+                    stepEl.textContent = value;
+                    return value;
+                }
                 },
                 set: function (newValue) {
-                    console.log('set');
-                    value = newValue;
-                    queue.forEach(fn => fn());
-                }
+                // console.log("set");
+                value = newValue;
+                queue.forEach((fn) => fn());
+                },
             });
         });
 
-        counterEl.textContent = data.counter;
-        stepEl.textContent = data.step;
         getSum();
-        buttonElMinus.addEventListener('click', decrementCounterHandler);
-        buttonElPlus.addEventListener('click', incrementCounterHandler);
+
+        buttonElCounterMinus.addEventListener("click", decrementCounterHandler);
+        buttonElCounterPlus.addEventListener("click", incrementCounterHandler);
+        buttonElStepMinus.addEventListener("click", decrementStepHandler);
+        buttonElStepPlus.addEventListener("click", incrementStepHandler);
+
     </script>
 </body>
 
