--- a/index.html
+++ b/index.html
@@ -117,20 +117,12 @@
             let value = data[key];
             Object.defineProperty(data, key, {
                 get: function () {
-                //   console.log("get");
+                  console.log("get");
                   return value;
                 },
                 set: function (newValue) {
-                // console.log("set");
+                console.log("set");
                 value = newValue;
-                switch (key) {
-                    case "counter":
-                        counterEl.textContent = value;
-                        break
-                    case "step":
-                        stepEl.textContent = value;
-                        break
-                }
                 queue.forEach((fn) => fn());
 
                 },
